add protoc feature(cupture keyboard, edbcam.._)