@@ -4,11 +4,10 @@ import com.autojudge.backend.mapper.EntityMapper;
 import com.autojudge.backend.model.*;
 import com.autojudge.backend.payload.dto.InterviewDto;
 import com.autojudge.backend.payload.dto.InterviewSessionDto;
-import com.autojudge.backend.repository.AnswerRepository;
-import com.autojudge.backend.repository.InterviewRepository;
-import com.autojudge.backend.repository.InterviewSessionRepository;
-import com.autojudge.backend.repository.QuestionRepository;
+import com.autojudge.backend.payload.dto.AnswerPerformanceDto;
+import com.autojudge.backend.repository.*;
 import com.autojudge.backend.security.services.UserDetailsImpl;
+import com.autojudge.backend.service.ProctorService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -29,6 +28,9 @@ public class AnalyticsController {
     private final InterviewSessionRepository sessionRepository;
     private final AnswerRepository answerRepository;
     private final QuestionRepository questionRepository;
+    private final OptionRepository optionRepository;
+    private final ProctorService proctorService;
+    private final ProctorSnapshotRepository proctorSnapshotRepository;
     private final EntityMapper entityMapper;
 
     @GetMapping("/dashboard")
@@ -153,7 +155,7 @@ public class AnalyticsController {
             
             List<Answer> answers = answerRepository.findAll().stream()
                     .filter(a -> a.getQuestion().getId().equals(question.getId()))
-                    .collect(Collectors.toList());
+                    .toList();
             
             double avgQuestionScore = answers.stream()
                     .filter(a -> a.getScore() != null)
@@ -180,7 +182,7 @@ public class AnalyticsController {
     public ResponseEntity<?> getSessionAnalytics(@PathVariable Long id) {
         Optional<InterviewSession> sessionOpt = sessionRepository.findById(id);
         
-        if (!sessionOpt.isPresent()) {
+        if (sessionOpt.isEmpty()) {
             return ResponseEntity.notFound().build();
         }
         
@@ -192,22 +194,9 @@ public class AnalyticsController {
         // Session details as DTO
         analytics.put("session", entityMapper.toInterviewSessionDto(session));
         
-        // Answer performance
-        List<Map<String, Object>> answerPerformance = new ArrayList<>();
-        
-        for (Answer answer : answers) {
-            Map<String, Object> ap = new HashMap<>();
-            ap.put("answerId", answer.getId());
-            ap.put("questionId", answer.getQuestion().getId());
-            ap.put("questionText", answer.getQuestion().getText());
-            ap.put("questionType", answer.getQuestion().getType());
-            ap.put("score", answer.getScore());
-            ap.put("evaluation", answer.getAiEvaluation());
-            
-            answerPerformance.add(ap);
-        }
-        
-        analytics.put("answerPerformance", answerPerformance);
+        // Answer performance using DTOs
+        List<AnswerPerformanceDto> answerPerformanceDtos = entityMapper.toAnswerPerformanceDtoList(answers);
+        analytics.put("answerPerformance", answerPerformanceDtos);
         
         // Category performance
         Map<String, Double> categoryPerformance = new HashMap<>();
@@ -234,6 +223,137 @@ public class AnalyticsController {
         
         analytics.put("categoryPerformance", categoryAverages);
         
+        // Proctoring data
+        Map<String, Object> proctorData = new HashMap<>();
+        long totalSnapshots = proctorSnapshotRepository.countBySession(session);
+        long flaggedSnapshots = proctorSnapshotRepository.countBySessionAndFlaggedTrue(session);
+        
+        proctorData.put("totalSnapshots", totalSnapshots);
+        proctorData.put("flaggedSnapshots", flaggedSnapshots);
+        proctorData.put("proctorNotes", session.getProctorNotes());
+        
+        // Event type statistics
+        Map<String, Long> eventTypeStats = new HashMap<>();
+        eventTypeStats.put("NORMAL", proctorSnapshotRepository.countBySessionAndEventType(session, "NORMAL"));
+        eventTypeStats.put("INITIAL", proctorSnapshotRepository.countBySessionAndEventType(session, "INITIAL"));
+        eventTypeStats.put("SCHEDULED", proctorSnapshotRepository.countBySessionAndEventType(session, "SCHEDULED"));
+        eventTypeStats.put("VISIBILITY_HIDDEN", proctorSnapshotRepository.countBySessionAndEventType(session, "VISIBILITY_HIDDEN"));
+        eventTypeStats.put("VISIBILITY_VISIBLE", proctorSnapshotRepository.countBySessionAndEventType(session, "VISIBILITY_VISIBLE"));
+        eventTypeStats.put("KEYBOARD_SHORTCUT", proctorSnapshotRepository.countBySessionAndEventType(session, "KEYBOARD_SHORTCUT"));
+        eventTypeStats.put("PRINT_SCREEN", proctorSnapshotRepository.countBySessionAndEventType(session, "PRINT_SCREEN"));
+        eventTypeStats.put("QUESTION_NAVIGATION", proctorSnapshotRepository.countBySessionAndEventType(session, "QUESTION_NAVIGATION"));
+        eventTypeStats.put("ANSWER_SUBMISSION", proctorSnapshotRepository.countBySessionAndEventType(session, "ANSWER_SUBMISSION"));
+        
+        proctorData.put("eventTypeStats", eventTypeStats);
+        
+        analytics.put("proctorData", proctorData);
+        
         return ResponseEntity.ok(analytics);
+    }
+    
+    @GetMapping("/session/{id}/proctor/snapshots")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> getSessionProctorSnapshots(
+            @PathVariable Long id,
+            @RequestParam(required = false) String eventType) {
+        Optional<InterviewSession> sessionOpt = sessionRepository.findById(id);
+        
+        if (sessionOpt.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        
+        InterviewSession session = sessionOpt.get();
+        List<ProctorSnapshot> snapshots;
+        
+        // Filter by event type if provided
+        if (eventType != null && !eventType.isEmpty()) {
+            snapshots = proctorService.getSessionSnapshotsByEventType(session, eventType);
+        } else {
+            snapshots = proctorService.getSessionSnapshots(session);
+        }
+        
+        // Convert to DTOs or simplified format
+        List<Map<String, Object>> snapshotData = snapshots.stream()
+            .map(snapshot -> {
+                Map<String, Object> data = new HashMap<>();
+                data.put("id", snapshot.getId());
+                data.put("timestamp", snapshot.getTimestamp());
+                data.put("createdAt", snapshot.getCreatedAt());
+                data.put("flagged", snapshot.getFlagged());
+                data.put("flagReason", snapshot.getFlagReason());
+                data.put("eventType", snapshot.getEventType());
+                // Don't include the actual image data in the list to reduce payload size
+                return data;
+            })
+            .collect(Collectors.toList());
+        
+        return ResponseEntity.ok(snapshotData);
+    }
+    
+    @GetMapping("/session/{id}/proctor/snapshots/suspicious")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> getSuspiciousSnapshots(@PathVariable Long id) {
+        Optional<InterviewSession> sessionOpt = sessionRepository.findById(id);
+        
+        if (sessionOpt.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        
+        InterviewSession session = sessionOpt.get();
+        List<ProctorSnapshot> snapshots = proctorService.getSuspiciousSnapshots(session);
+        
+        // Convert to DTOs or simplified format
+        List<Map<String, Object>> snapshotData = snapshots.stream()
+            .map(snapshot -> {
+                Map<String, Object> data = new HashMap<>();
+                data.put("id", snapshot.getId());
+                data.put("timestamp", snapshot.getTimestamp());
+                data.put("createdAt", snapshot.getCreatedAt());
+                data.put("flagged", snapshot.getFlagged());
+                data.put("flagReason", snapshot.getFlagReason());
+                data.put("eventType", snapshot.getEventType());
+                // Don't include the actual image data in the list to reduce payload size
+                return data;
+            })
+            .collect(Collectors.toList());
+        
+        return ResponseEntity.ok(snapshotData);
+    }
+    
+    @GetMapping("/session/{sessionId}/proctor/snapshots/{snapshotId}")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<?> getProctorSnapshot(
+            @PathVariable Long sessionId, 
+            @PathVariable Long snapshotId) {
+        Optional<InterviewSession> sessionOpt = sessionRepository.findById(sessionId);
+        
+        if (sessionOpt.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        
+        Optional<ProctorSnapshot> snapshotOpt = proctorSnapshotRepository.findById(snapshotId);
+        
+        if (snapshotOpt.isEmpty()) {
+            return ResponseEntity.notFound().build();
+        }
+        
+        ProctorSnapshot snapshot = snapshotOpt.get();
+        
+        // Verify that the snapshot belongs to the specified session
+        if (!snapshot.getSession().getId().equals(sessionId)) {
+            return ResponseEntity.badRequest().body("Snapshot does not belong to the specified session");
+        }
+        
+        // Return the full snapshot data including the image
+        Map<String, Object> snapshotData = new HashMap<>();
+        snapshotData.put("id", snapshot.getId());
+        snapshotData.put("timestamp", snapshot.getTimestamp());
+        snapshotData.put("createdAt", snapshot.getCreatedAt());
+        snapshotData.put("flagged", snapshot.getFlagged());
+        snapshotData.put("flagReason", snapshot.getFlagReason());
+        snapshotData.put("eventType", snapshot.getEventType());
+        snapshotData.put("imageData", snapshot.getImageData());
+        
+        return ResponseEntity.ok(snapshotData);
     }
 } 
